# rust-patterns

./: Cargo.toml  readme.md
abstract_factory/: readme.md
abstract_factory/src/: factory.rs  lib.rs  main.rs  pizza.rs  pizza_store.rs
adapter/: readme.md
adapter/src/: adapter.rs  client.rs  legacy.rs  lib.rs  main.rs
bridge/: readme.md
bridge/src/: connection.rs  database.rs  lib.rs  main.rs  pool.rs
chain_of_responsibility/: readme.md
chain_of_responsibility/src/: funcs.rs  handler.rs  lib.rs  main.rs  patient.rs  patient_funcs.rs
chain_of_responsibility/src/handler/: handler_func.rs
command/: Cargo.toml  readme.md
command/src/: commands.rs  lib.rs  main.rs
composite/: readme.md
composite/src/: lib.rs  main.rs
decorator/: readme.md
decorator/src/: buf_reader.rs  lib.rs  main.rs  reader.rs
facade/: Cargo.toml  readme.md
facade/src/: lib.rs  main.rs  wallet_facade.rs
factory_method/: Cargo.toml  readme.md
factory_method/src/: lib.rs  pizza.rs  pizza_store.rs
flyweight/: Cargo.toml  readme.md
flyweight/ecs/: Cargo.toml  readme.md
flyweight/src/: lib.rs  main.rs  tree_context.rs  tree_flyweight.rs
mediator/: readme.md
mediator/src/: lib.rs  main.rs  station.rs  train.rs
observer/: Cargo.toml  readme.md
observer/actor_model/: Cargo.toml  readme.md
observer/src/: lib.rs  main.rs  publisher.rs  weather_observers.rs
proxy/: Cargo.toml  readme.md
proxy/src/: lib.rs  main.rs  server_proxy.rs  server_subject.rs
state/: Cargo.toml  readme.md
state/src/: lib.rs  state.rs
state/src/state/: paused.rs  playing.rs  stopped.rs
(+14 files in other folders)
