[workspace]
members = [
    "command", 
    "state", 
    "chain_of_responsibility", 
    "mediator",
    "observer",
    "observer/actor_model",
    "factory_method",
    "abstract_factory",
    "adapter",
    "bridge",
    "composite",
    "decorator",
    "facade",
    "flyweight",
    "flyweight/ecs",
    "proxy"
]