[package]
name = "state"
version = "0.1.0"
edition = "2021"
default-run = "main" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast = "0.11.0"
cursive = { version = "0.20.0", features = ["crossterm-backend"], default-features = false}